# privai-cli

./: README.md  pyproject.toml
privai_cli/: client.py  config.py  main.py
privai_cli/commands/: chat.py  files.py  filesets.py  jobs.py  langserve.py  models.py  prompt.py  qa.py  system.py
