[tool.poetry]
name = "privai-cli"
version = "0.1.0"
description = "CLI tool for interacting with the PrivAI API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.12.3"}
requests = "^2.32.3"
rich = "^13.7.1"

[tool.poetry.scripts]
privai-cli = "privai_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
